output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_875.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_875.py", line 119
    for i in range(2, n):
                        ^
SyntaxError: invalid syntax
